tests/semantic/rule_typecompat/rule_typecompat.err
Warning: No rules/facts defined for relation H in file rule_typecompat.dl at line 5
.decl H (t:T)
^-------------
Warning: No rules/facts defined for relation B in file rule_typecompat.dl at line 7
.decl B (s:S)
^-------------
Warning: No rules/facts defined for relation C in file rule_typecompat.dl at line 8
.decl C (q:Q)
^-------------
Warning: No rules/facts defined for relation D in file rule_typecompat.dl at line 9
.decl D (r:R)
^-------------
Warning: No rules/facts defined for relation E in file rule_typecompat.dl at line 10
.decl E (r:R, s:S)
^------------------
Error: Unable to deduce type for variable x in file rule_typecompat.dl at line 15
A(x) :- B(x).
--^-----------
Error: Unable to deduce type for variable x in file rule_typecompat.dl at line 15
A(x) :- B(x).
----------^---
Error: Unable to deduce type for variable x in file rule_typecompat.dl at line 18
A(x) :- F(x,x).
--^-------------
Error: Unable to deduce type for variable x in file rule_typecompat.dl at line 18
A(x) :- F(x,x).
----------^-----
Error: Unable to deduce type for variable x in file rule_typecompat.dl at line 18
A(x) :- F(x,x).
------------^---
Warning: Variable y only occurs once in file rule_typecompat.dl at line 20
A(x) :- F(y,x).
----------^-----
Error: Unable to deduce type for variable x in file rule_typecompat.dl at line 23
A(x) :- G(x,x).
--^-------------
Error: Unable to deduce type for variable x in file rule_typecompat.dl at line 23
A(x) :- G(x,x).
----------^-----
Error: Unable to deduce type for variable x in file rule_typecompat.dl at line 23
A(x) :- G(x,x).
------------^---
Warning: Variable y only occurs once in file rule_typecompat.dl at line 25
A(x) :- G(x,y).
------------^---
Error: Unable to deduce type for variable x in file rule_typecompat.dl at line 28
G(x,x) :- A(x).
--^-------------
Error: Unable to deduce type for variable x in file rule_typecompat.dl at line 28
G(x,x) :- A(x).
----^-----------
Error: Unable to deduce type for variable x in file rule_typecompat.dl at line 28
G(x,x) :- A(x).
------------^---
Error: Ungrounded variable y in file rule_typecompat.dl at line 30
G(x,y) :- A(x).
----^-----------
Warning: Variable y only occurs once in file rule_typecompat.dl at line 30
G(x,y) :- A(x).
----^-----------
Error: Unable to deduce type for variable x in file rule_typecompat.dl at line 33
A(x) :- B(x), C(x).
--^-----------------
Error: Unable to deduce type for variable x in file rule_typecompat.dl at line 33
A(x) :- B(x), C(x).
----------^---------
Error: Unable to deduce type for variable x in file rule_typecompat.dl at line 33
A(x) :- B(x), C(x).
----------------^---
Warning: Variable y only occurs once in file rule_typecompat.dl at line 36
A(x) :- A(x), B(y), C(z).
----------------^---------
Warning: Variable z only occurs once in file rule_typecompat.dl at line 36
A(x) :- A(x), B(y), C(z).
----------------------^---
Error: Unable to deduce type for variable y in file rule_typecompat.dl at line 39
F(x,y) :- F(x,z), G(z,y).
----^---------------------
Error: Unable to deduce type for variable y in file rule_typecompat.dl at line 39
F(x,y) :- F(x,z), G(z,y).
----------------------^---
Error: Ungrounded variable y in file rule_typecompat.dl at line 41
F(x,y) :- F(x,z), G(z,x).
----^---------------------
Warning: Variable y only occurs once in file rule_typecompat.dl at line 41
F(x,y) :- F(x,z), G(z,x).
----^---------------------
Error: Unable to deduce type for variable v in file rule_typecompat.dl at line 47
F(x,y) :- F(x,v), F(w,y), A(v), D(v).
--------------^-----------------------
Warning: Variable w only occurs once in file rule_typecompat.dl at line 47
F(x,y) :- F(x,v), F(w,y), A(v), D(v).
--------------------^-----------------
Error: Unable to deduce type for variable v in file rule_typecompat.dl at line 47
F(x,y) :- F(x,v), F(w,y), A(v), D(v).
----------------------------^---------
Error: Unable to deduce type for variable v in file rule_typecompat.dl at line 47
F(x,y) :- F(x,v), F(w,y), A(v), D(v).
----------------------------------^---
Warning: Variable v only occurs once in file rule_typecompat.dl at line 48
F(x,y) :- F(x,v), F(w,y), A(w), D(w).
--------------^-----------------------
Error: Unable to deduce type for variable w in file rule_typecompat.dl at line 48
F(x,y) :- F(x,v), F(w,y), A(w), D(w).
--------------------^-----------------
Error: Unable to deduce type for variable w in file rule_typecompat.dl at line 48
F(x,y) :- F(x,v), F(w,y), A(w), D(w).
----------------------------^---------
Error: Unable to deduce type for variable w in file rule_typecompat.dl at line 48
F(x,y) :- F(x,v), F(w,y), A(w), D(w).
----------------------------------^---
Error: Unable to deduce type for variable v in file rule_typecompat.dl at line 49
F(x,y) :- F(x,v), F(w,y), A(w), D(v).
--------------^-----------------------
Error: Unable to deduce type for variable w in file rule_typecompat.dl at line 49
F(x,y) :- F(x,v), F(w,y), A(w), D(v).
--------------------^-----------------
Error: Unable to deduce type for variable w in file rule_typecompat.dl at line 49
F(x,y) :- F(x,v), F(w,y), A(w), D(v).
----------------------------^---------
Error: Unable to deduce type for variable v in file rule_typecompat.dl at line 49
F(x,y) :- F(x,v), F(w,y), A(w), D(v).
----------------------------------^---
Warning: Variable w only occurs once in file rule_typecompat.dl at line 52
F(x,y) :- F(x,v), F(w,y), !H(v), !D(v).
--------------------^-------------------
Warning: Variable v only occurs once in file rule_typecompat.dl at line 53
F(x,y) :- F(x,v), F(w,y), !H(w), !D(w).
--------------^-------------------------
Error: Unable to deduce type for variable x in file rule_typecompat.dl at line 57
F(x,y) :- F(x,y),  x > y.
--^-----------------------
Error: Unable to deduce type for variable y in file rule_typecompat.dl at line 57
F(x,y) :- F(x,y),  x > y.
----^---------------------
Error: Unable to deduce type for variable x in file rule_typecompat.dl at line 57
F(x,y) :- F(x,y),  x > y.
------------^-------------
Error: Unable to deduce type for variable y in file rule_typecompat.dl at line 57
F(x,y) :- F(x,y),  x > y.
--------------^-----------
Error: Non-numerical operand for comparison in file rule_typecompat.dl at line 57
F(x,y) :- F(x,y),  x > y.
-------------------^------
Error: Unable to deduce type for variable x in file rule_typecompat.dl at line 57
F(x,y) :- F(x,y),  x > y.
-------------------^------
Error: Non-numerical operand for comparison in file rule_typecompat.dl at line 57
F(x,y) :- F(x,y),  x > y.
-----------------------^--
Error: Unable to deduce type for variable y in file rule_typecompat.dl at line 57
F(x,y) :- F(x,y),  x > y.
-----------------------^--
Error: Unable to deduce type for variable v in file rule_typecompat.dl at line 59
F(x,y) :- F(x,v), F(w,y), w != v.
--------------^-------------------
Error: Unable to deduce type for variable w in file rule_typecompat.dl at line 59
F(x,y) :- F(x,v), F(w,y), w != v.
--------------------^-------------
Error: Unable to deduce type for variable w in file rule_typecompat.dl at line 59
F(x,y) :- F(x,v), F(w,y), w != v.
--------------------------^-------
Error: Unable to deduce type for variable v in file rule_typecompat.dl at line 59
F(x,y) :- F(x,v), F(w,y), w != v.
-------------------------------^--
Error: Non-numerical operand for comparison in file rule_typecompat.dl at line 62
F(x,y) :- F(x,y),  x > t.
-------------------^------
Error: Non-numerical operand for comparison in file rule_typecompat.dl at line 62
F(x,y) :- F(x,y),  x > t.
-----------------------^--
Error: Ungrounded variable t in file rule_typecompat.dl at line 62
F(x,y) :- F(x,y),  x > t.
-----------------------^--
Warning: Variable t only occurs once in file rule_typecompat.dl at line 62
F(x,y) :- F(x,y),  x > t.
-----------------------^--
Error: Non-numerical operand for comparison in file rule_typecompat.dl at line 63
F(x,y) :- F(x,y),  t < x.
-------------------^------
Error: Ungrounded variable t in file rule_typecompat.dl at line 63
F(x,y) :- F(x,y),  t < x.
-------------------^------
Warning: Variable t only occurs once in file rule_typecompat.dl at line 63
F(x,y) :- F(x,y),  t < x.
-------------------^------
Error: Non-numerical operand for comparison in file rule_typecompat.dl at line 63
F(x,y) :- F(x,y),  t < x.
-----------------------^--
46 errors generated, evaluation aborted
